[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/Countdown.tscn" type="PackedScene" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 780.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 780.0
margin_bottom = 780.0
custom_constants/separation = 20

[node name="Autofire" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 780.0
margin_bottom = 21.0
size_flags_vertical = 0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Autofire"]
margin_right = 54.0
margin_bottom = 21.0
text = "Autofire:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Autofire"]
margin_left = 59.0
margin_right = 59.0
margin_bottom = 21.0

[node name="CurrentWeapon" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 780.0
margin_bottom = 88.0
size_flags_vertical = 0
custom_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CurrentWeapon"]
margin_right = 780.0
margin_bottom = 21.0
text = "Weapon:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/CurrentWeapon"]
margin_top = 26.0
margin_right = 780.0
margin_bottom = 47.0

[node name="CurrentLevel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 780.0
margin_bottom = 129.0
size_flags_vertical = 0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/CurrentLevel"]
margin_right = 51.0
margin_bottom = 21.0
text = "Level 1"

[node name="RemainingEnemies" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 780.0
margin_bottom = 196.0
size_flags_vertical = 0
custom_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/RemainingEnemies"]
margin_right = 780.0
margin_bottom = 21.0
text = "Enemies:"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/RemainingEnemies"]
margin_top = 26.0
margin_right = 780.0
margin_bottom = 47.0
